--- a/TimeSheetApp/EditForm.xaml
+++ b/TimeSheetApp/EditForm.xaml
@@ -22,9 +22,7 @@
             <ColumnDefinition Width="6*"/>
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0"
-              Margin="10,10,10,10"
-              >
-            
+              Margin="10,10,10,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="90"/>
@@ -62,7 +60,7 @@
             <Label Margin="3,7,0,0" Content="Эскалация:" Grid.Row="8" FontWeight="Bold"/>
             <Label Margin="3,7,0,0" Content="Формат:" Grid.Row="10" FontWeight="Bold"/>
             <Label Margin="3,7,0,0" Content="Риск:" Grid.Row="12" FontWeight="Bold"/>
-            <ComboBox Name="ProcessList" Grid.Row="1" ItemsSource="{Binding Processes}" SelectedItem="{Binding EditedRecord.Process}">
+            <ComboBox Name="ProcessList" Grid.Row="1" ItemsSource="{Binding AllProcesses}" SelectedItem="{Binding EditedRecord.Process}">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock>
@@ -76,12 +74,12 @@
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <xctk:CheckComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlock}" 
+            <xctk:CheckComboBox Name="BusinessList" Grid.Row="3" ItemsSource="{Binding BusinessBlocks}" 
                                 DisplayMemberPath="BusinessBlockName" 
                                 SelectedItemsOverride="{Binding BusinessBlockChoiceCollection}">
             </xctk:CheckComboBox>
             <xctk:CheckComboBox Name="supportList" Grid.Row="5" 
-                                ItemsSource="{Binding SupportsArr}" 
+                                ItemsSource="{Binding Supports}" 
                                 DisplayMemberPath="Name" 
                                 SelectedItemsOverride="{Binding SupportsChoiceCollection}">
             </xctk:CheckComboBox>
@@ -91,8 +89,8 @@
                                 DisplayMemberPath="Name" 
                                 SelectedItemsOverride="{Binding EscalationsChoiceCollection}" >
             </xctk:CheckComboBox>
-            <ComboBox Name="FormatList" Grid.Row="11" ItemsSource="{Binding FormatList}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Formats}"/>
-            <xctk:CheckComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding RiskCol}" DisplayMemberPath="RiskName"  SelectedItemsOverride="{Binding RiskChoiceCollection}">
+            <ComboBox Name="FormatList" Grid.Row="11" ItemsSource="{Binding Formats}" DisplayMemberPath="Name" SelectedItem="{Binding EditedRecord.Formats}"/>
+            <xctk:CheckComboBox Name="RiskList" Grid.Row="13" ItemsSource="{Binding Risks}" DisplayMemberPath="RiskName"  SelectedItemsOverride="{Binding RiskChoiceCollection}">
             </xctk:CheckComboBox>
             <StackPanel Grid.Row="14" Margin="0,10,0,10">
 
